<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".question2"
        android:orientation="vertical"
        android:padding="32dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"/>


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPersonName"
            android:layout_marginTop="40dp"
            android:hint="@string/hint"/>

        <Button
            android:id="@+id/submit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/submit"
            android:onClick="onClickQuestion2"
            />

        <ImageButton
            android:id="@+id/submit2Image"
            android:layout_width="100dp"
            android:layout_height="41dp"
            android:src="@mipmap/button_image"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:onClick="onClickQuestion2">

        </ImageButton>

        <TextView
            android:id="@+id/textView3"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/q2timer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="30dp"
            />

        <TextView
            android:id="@+id/q2timer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="30dp"
            />

    </LinearLayout>
</ScrollView>